# cmgl

./: CMakeLists.txt  windows-build-angle.cmd  windows-build-ffmpeg.cmd  windows-build-ffmpeg.sh  windows-build-project.cmd  windows-build-sdl.cmd
examples/: CMakeLists.txt
examples/windows/: CMakeLists.txt
examples/windows/encode/: CMakeLists.txt  main.cpp
examples/windows/player/: CMakeLists.txt  http.cpp  http.h  main.cpp  player.cpp  player.h
examples/windows/test/: CMakeLists.txt  main.cpp
src/: CMGL.h  CMakeLists.txt  Future.h  Future.inl  Object.cpp  Object.h  RefPtr.h  Thread.cpp  Thread.h  WaitableEvent.cpp  WaitableEvent.h  WeakPtr.h  defines.h  omplayer.h
src/ffmpeg/: AudioSplitter.cpp  AudioSplitter.h  CMakeLists.txt  Converter.cpp  Converter.h  Decoder.cpp  Decoder.h  Error.cpp  Error.h  Frame.cpp  Frame.h  Movie.cpp  Movie.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Source.cpp  Source.h  Stream.cpp  Stream.h  Stream.inl  Thread.cpp  Thread.h  defines.cpp  defines.h
src/render/: CMakeLists.txt  Framebuffer.h  RenderContext.cpp  RenderContext.h  RenderFactory.cpp  RenderFactory.h  RenderFilter.cpp  RenderFilter.h  RenderLayer.cpp  RenderLayer.h  RenderObject.cpp  RenderObject.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  Resource.h  Texture.h  VideoSource.cpp  VideoSource.h  defines.h
src/render/android/: AndroidRenderContext.cpp  AndroidRenderContext.h  AndroidWindow.cpp  AndroidWindow.h  defines.cpp  defines.h
src/render/apple/: OMPRenderContext.h  OMPRenderContext.mm  OMPRenderThread.h  OMPRenderThread.m  defines.h
src/render/apple/ios/: AppleFramebuffer.h  AppleFramebuffer.mm  AppleRenderContext.h  AppleRenderContext.mm  AppleWindow.h  AppleWindow.mm  OMPRenderView.h  OMPRenderView.mm  OMPView.h  OMPView.mm
src/render/apple/mac/: AppleWindow.h  AppleWindow.mm  OMPRenderView.h  OMPRenderView.mm
src/render/egl/: CMakeLists.txt  EGLFramebuffer.cpp  EGLFramebuffer.h  EGLRenderContext.cpp  EGLRenderContext.h  EGLWindow.cpp  EGLWindow.h  defines.h
src/render/gles2/: CMakeLists.txt  Program.cpp  Program.h  TestRenderObject.cpp  TestRenderObject.h  Texture.cpp  Texture.h  TextureFramebuffer.cpp  TextureFramebuffer.h  Window.cpp  Window.h  defines.h
src/render/gles2/renderer/: CMakeLists.txt  RECTRenderer.cpp  RECTRenderer.h  RGBARenderer.cpp  RGBARenderer.h  YUV420PRenderer.cpp  YUV420PRenderer.h  YUV420SPRenderer.cpp  YUV420SPRenderer.h
src/render/gles2/shaders/: RECT.fs  RGBA.fs  RGBA.vs  YUV420P.fs  YUV420SP.fs
src/render/microsoft/: CMakeLists.txt  MSRenderContext.cpp  MSRenderContext.h  MSWindow.cpp  MSWindow.h  RenderContext.cpp  RenderContext.h  Window.cpp  Window.h  defines.h
src/render/source/: CMakeLists.txt  RGB24VideoSource.cpp  RGB24VideoSource.h  RGBAVideoSource.cpp  RGBAVideoSource.h  URLVideoSource.cpp  URLVideoSource.h  YUV420PVideoSource.cpp  YUV420PVideoSource.h  YUV420SPVideoSource.cpp  YUV420SPVideoSource.h  defines.h
src/stream/: Stream.h
src/thread/: CMakeLists.txt  Future.h  Future.inl  Thread.cpp  Thread.h  WaitableEvent.cpp  WaitableEvent.h  defines.cpp  defines.h
src/ui/: CMakeLists.txt  Layer.cpp  Layer.h  LayoutConstraint.cpp  LayoutConstraint.h  Type.cpp  Type.h  View.cpp  View.h  defines.h
src/ui/windows/: CMakeLists.txt  Layer.cpp  Layer.h  Pointer.h  Window.cpp  Window.h  defines.h
src/ui/windows/render/: CMakeLists.txt  Image.cpp  Image.h  defines.h
